[core.common] Remove obsolete uri resolution steps
If Eclipse is running we use platform uris and normalized file uris
otherwise. Therefore we can eliminate uri resolution everywhere except
for import statements with uris.

Change-Id: I613aeb933b1d18c6dbbf2512eef67bf7289ab04c